Fixed spacing and width of web site

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
 h1 {
     color: rgb(151, 9, 9);
     font-family: "Vollkorn",Helvetica, Arial, sans-serif;
